# hexo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  config.py  dashboard.html  elo.json  favorites.json  game.py  inference.py  mcts.py  metrics.jsonl  mobile.html  net.py  play.py  probe_ownership.py  run.bat  run.sh  server.py  test_game.py  tournament.py  train.py  train.sh  tune.py
autoresearch/: experiments_queue.md  program.md  results.tsv  run_trial.py
docs/: ASSESSMENT.md  AUTOTUNE.md  DESIGN.md  ELO.md  INFERENCE.md  MCTS.md  NET.md  ROADMAP.md  TRAINING.md  TRAINING_RESEARCH.md  rust_port_plan.md
docs/research/: 07_hexgo_theory_bridge.md
hexgo-rs/: BUILD.md  Cargo.toml
hexgo-rs/src/: batched.rs  encode.rs  game.rs  lib.rs  mcts.rs  node.rs  parallel.rs  types.rs
hexgo-rs/tests/: test_parity.py
